# pocketbase-kotlin

./: BUILD.bazel  build.gradle.kts
src/commonMain/kotlin/io/github/agrevster/pocketbaseKotlin/services/: RealtimeService.kt
